[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://vr_offices/ui/VrOfficesUi.gd" id="1"]

[node name="VrOfficesUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 320.0
offset_bottom = 158.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="SelectedLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Selected: (none)"

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="AddNpcButton" type="Button" parent="Panel/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Add NPC"

[node name="RemoveSelectedButton" type="Button" parent="Panel/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Remove Selected"

[node name="IrcButton" type="Button" parent="Panel/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Settingsâ€¦"

[node name="CultureRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="CultureLabel" type="Label" parent="Panel/VBox/CultureRow"]
layout_mode = 2
text = "Culture"

[node name="CultureOption" type="OptionButton" parent="Panel/VBox/CultureRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
